--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
                 <article>
                     <header>
                         <!-- Article's header goes here -->
-                         <h2>Ten Amusing Facts About Dogs</h2>
-                         <h3>Read time: 5 minutes</h3>
+                         <h2>All Amusing Facts About Dogs</h2>
+                         <h3>Read time: 100 minutes</h3>
                     </header>
                     <main>
                         <p>
