--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <article>
                     <header>
                         <!-- Article's header goes here -->
-                         <h2>All Amusing Facts About Dogs</h2>
+                         <h2>All the Amusing Facts About Dogs</h2>
                          <h3>Read time: 100 minutes</h3>
                     </header>
                     <main>
