--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BrightBlogSite</title>
+    <title>LondonFashion</title>
 </head>
 <body>
     
     <header id="main-header">
         <!-- the content of the header goes here -->
-         <h1 id="logo">BrightBlog</h1>
+         <h1 id="logo">"London Fashion"</h1>
          <nav>
             <ul id="nav-ul">
                 <li>
