--- a/index.html
+++ b/index.html
@@ -6,24 +6,19 @@
     <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LondonFashion</title>
+    <title>London Fashion</title>
 </head>
 <body>
     
     <header id="main-header">
         <!-- the content of the header goes here -->
-         <h1 id="logo">"London Fashion"</h1>
+         <h1 id="logo">London Fashion</h1>
          <nav>
             <ul id="nav-ul">
-                <li>
-                    <a href="https://www.youtube.com/" class="navbutton">Home</a>
-                </li>
-                <li>
-                    <a href="https://www.youtube.com/" class="navbutton">About us</a>
-                </li>
-                <li>
-                    <a href="https://www.youtube.com/" class="navbutton">Contact</a>
-                </li>
+                <li><a href="https://www.youtube.com/" class="navbutton">Latest</a></li>
+                <li><a href="https://www.youtube.com/" class="navbutton">Apparel</a></li>
+                <li><a href="https://www.youtube.com/" class="navbutton"></a>Beauty</li>
+                <li><a href="https://www.youtube.com/" class="navbutton"></a>Wellness</li>
             </ul>
          </nav>
     </header>
