--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             <ul id="nav-ul">
                 <li><a href="https://www.youtube.com/" class="navbutton">Latest</a></li>
                 <li><a href="https://www.youtube.com/" class="navbutton">Apparel</a></li>
-                <li><a href="https://www.youtube.com/" class="navbutton"></a>Beauty</li>
-                <li><a href="https://www.youtube.com/" class="navbutton"></a>Wellness</li>
+                <li><a href="https://www.youtube.com/" class="navbutton">Beauty</a></li>
+                <li><a href="https://www.youtube.com/" class="navbutton">Wellness</a></li>
             </ul>
          </nav>
     </header>
