--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
          <h1 id="logo">London Fashion</h1>
          <nav>
             <ul id="nav-ul">
+                <li><a href="https://www.youtube.com/" class="navbutton">Home</a></li>
                 <li><a href="https://www.youtube.com/" class="navbutton">Latest</a></li>
                 <li><a href="https://www.youtube.com/" class="navbutton">Apparel</a></li>
                 <li><a href="https://www.youtube.com/" class="navbutton">Beauty</a></li>
