--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Baskervville:ital@0;1&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Baskervville:ital@0;1&family=Great+Vibes&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Baskervville:ital@0;1&family=Great+Vibes&family=Urbanist:ital,wght@0,100;1,100&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>London Fashion</title>
@@ -81,7 +82,7 @@
                 <article>
                     <header>
                         <!-- Article's header goes here -->
-                         <h2>Ten Amusing Facts About Dogs</h2>
+                         <h2>Advice on how to look, feel, and live your best in London!</h2>
                          <h3>Read time: 5 minutes</h3>
                     </header>
                     <main>
