--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 
     </main>
     <footer>
-        <h2>BrightBlogSite</h2>
+        <h2>London Fashion</h2>
         <section>
             <nav>
                 <ul id="footer-ul">
