--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     </main>
                     <footer>
                         <h2>Author: Andrea Dada</h2>
-                        <img src="https://placebear.com/100/100" alt="A profile pic of a bear">
+                        <img src="https://images.pexels.com/photos/1926769/pexels-photo-1926769.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="A profile pic of a bear">
                         <h3>Last posted: 01-08-2024</h3>
                         <a href="https://www.brightnetwork.co.uk/" target="_blank">Author's profile</a>
                     </footer>
@@ -109,7 +109,7 @@
                 <article>
                     <header>
                         <!-- Article's header goes here -->
-                         <h2>Ten Amusing Facts About Dogs</h2>
+                         <h2></h2>
                          <h3>Read time: 5 minutes</h3>
                     </header>
                     <main>
