--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
             <input type="text" id="last_name" name="last_name" required>
             <br>
 
-            <label for="email">Email</label>
+            <label for="email">Email:</label>
             <input type="email" name="email" id="email">
             <br>
 
@@ -158,7 +158,7 @@
             <input type="password" name="password" id="password">
             <br>
 
-            <label for="favourite_animal">Favourite Animal</label>
+           <!-- <label for="favourite_animal">Favourite Animal</label>
             <input type="radio" name="favourite_animal" id="dog" value="dog">
             <label for="dog">Dog</label>
             <input type="radio" name="favourite_animal" id="cat" value="cat">
@@ -167,7 +167,7 @@
             <label for="cat">Cat</label>
             <input type="radio" name="favourite_animal" id="hedgeog" value="hedgeog">
             <label for="hedgeog">Hedgeog</label>
-            <br>
+            <br>-->
 
             <label for="country">Country:</label>
             <select name="name" id="country">
