--- a/index.html
+++ b/index.html
@@ -169,13 +169,13 @@
             <label for="hedgeog">Hedgeog</label>
             <br>-->
 
-            <label for="country">Country:</label>
+           <!-- <label for="country">Country:</label>
             <select name="name" id="country">
                 <option value="england">England</option>
                 <option value="scotland">Scotland</option>
                 <option value="wales">Wales</option>
                 <option value="northern_ireland">Northern Ireland</option>
-            </select>
+            </select> -->
 
             <label for="bio">Biography:</label>
             <textarea name="bio" id="bio" cols="30" rows="5"></textarea>
