--- a/index.html
+++ b/index.html
@@ -177,8 +177,8 @@
                 <option value="northern_ireland">Northern Ireland</option>
             </select> -->
 
-            <label for="bio">Biography:</label>
-            <textarea name="bio" id="bio" cols="30" rows="5"></textarea>
+            <!--<label for="bio">Biography:</label>
+            <textarea name="bio" id="bio" cols="30" rows="5"></textarea> -->
 
             <input type="checkbox" id="subscribe" name="subscribe">
             <label for="subscribe">Subscribe to our newsletter!</label>
