--- a/index.html
+++ b/index.html
@@ -33,20 +33,21 @@
                     <h4>Filter by month</h4>
                     <nav>
                         <ul>
-                            <li><a href=""></a>Filter for January</li>
-                            <li><a href=""></a>Filter for February</li>
-                            <li><a href=""></a>Filter for March</li>
+                            <li><a href=""></a>Filter for May</li>
+                            <li><a href=""></a>Filter for June</li>
+                            <li><a href=""></a>Filter for July</li>
+                            <li><a href=""></a>Filter for August</li>
+                            <li><a href=""></a>Filter for September</li>
                         </ul>
                     </nav>
                 </section>
                 <section>
-                   <h4>Filter by category</h4> 
+                   <h4>Filter by year</h4> 
                    <nav>
                     <ul>
-                        <li><a href="">Puppies</a></li>
-                        <li><a href="">Dogs</a></li>
-                        <li><a href="">Cats</a></li>
-                        <li><a href="">Hedgeogs</a></li>
+                        <li><a href=""></a>2022</li>
+                        <li><a href=""></a>2023</li>
+                        <li><a href=""></a>2024</li>
                     </ul>
                    </nav>
                 </section>
