--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
                     <h4>Filter by month</h4>
                     <nav>
                         <ul>
-                            <li><a href=""></a>Filter for May</li>
-                            <li><a href=""></a>Filter for June</li>
-                            <li><a href=""></a>Filter for July</li>
-                            <li><a href=""></a>Filter for August</li>
-                            <li><a href=""></a>Filter for September</li>
+                            <li><a href="">Filter for May</a></li>
+                            <li><a href="">Filter for June</a></li>
+                            <li><a href="">Filter for July</a></li>
+                            <li><a href="">Filter for August</a></li>
+                            <li><a href="">Filter for September</a></li>
                         </ul>
                     </nav>
                 </section>
@@ -45,9 +45,9 @@
                    <h4>Filter by year</h4> 
                    <nav>
                     <ul>
-                        <li><a href=""></a>2022</li>
-                        <li><a href=""></a>2023</li>
-                        <li><a href=""></a>2024</li>
+                        <li><a href="">2022</a></li>
+                        <li><a href="">2023</a></li>
+                        <li><a href="">2024</a></li>
                     </ul>
                    </nav>
                 </section>
