--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                     </main>
                     <footer>
                         <h2>Author: Andrea Dada</h2>
-                        <img src=https://scanmagazine.co.uk/content/uploads/2022/04/Marville-Road_1_Easily-fashionable_Marville-Road-web.jpg alt="A profile pic of a woman in a trench coat">
+                        <img src="https://scanmagazine.co.uk/content/uploads/2022/04/Marville-Road_1_Easily-fashionable_Marville-Road-web.jpg" alt="A profile pic of a woman in a trench coat">
                         <h3>Last posted: 01-08-2024</h3>
                         <a href="https://www.brightnetwork.co.uk/" target="_blank">Author's profile</a>
                     </footer>
