--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                     </main>
                     <footer>
                         <h2>Author: Andrea Dada</h2>
-                        <img src="https://placebear.com/100/100" alt="A profile pic of a bear">
+                        <img src="https://img.freepik.com/premium-photo/young-woman-finding-inner-calm-through-yoga-comfort-her-home-concept-yoga-home-inner-calm-finding-peace-selfcare-mindfulness_918839-29337.jpg" alt="A woman doing yoga">
                         <h3>Last posted: 01-08-2024</h3>
                         <a href="https://www.brightnetwork.co.uk/" target="_blank">Author's profile</a>
                     </footer>
