--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                          <img src="https://media.istockphoto.com/id/1307568521/photo/its-the-denim-that-does-it-for-me.jpg?s=612x612&w=0&k=20&c=0RQfpn8VJxXl6sO4aUehTsPvyYKGPwVwz1EdJRBU_Nw=" alt="A woman wearing streetwear">
                          <h3>Read time: 100 minutes</h3>
                     </header>
-                    <main>
+                   <!-- <main>
                         <p>
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis facilis soluta non at quos in? Nam officiis, corrupti sequi nesciunt aliquam ratione voluptas atque ut vero eos! Sed doloremque, deleniti molestias distinctio impedit similique quam nulla? Repudiandae accusamus nam minima deleniti inventore, alias fugiat modi quidem magni, iusto eos hic excepturi ullam? Illum eveniet, excepturi provident voluptatibus ratione sed cupiditate, dicta nesciunt mollitia laborum cumque fugit adipisci? Voluptatem ipsum ea illo quam dolore, eligendi omnis recusandae enim, praesentium illum totam assumenda officia nulla fugiat? Ipsa sit eum harum soluta repellendus provident animi natus nesciunt, explicabo quae, repudiandae tempore assumenda nobis!
                         </p>
@@ -84,10 +84,10 @@
                     </footer>
                 </article>
                 <article>
-                    <header>
+                    <header> -->
                         <!-- Article's header goes here -->
                          <h2></h2>
-                         <h3>Read time: 5 minutes</h3>
+                         <!--<h3>Read time: 5 minutes</h3>
                     </header>
                     <main>
                         <p>
@@ -111,10 +111,10 @@
                     </footer>
                 </article>
                 <article>
-                    <header>
+                    <header> -->
                         <!-- Article's header goes here -->
                          <h2></h2>
-                         <h3>Read time: 5 minutes</h3>
+                         <!--<h3>Read time: 5 minutes</h3>
                     </header>
                     <main>
                         <p>
@@ -129,13 +129,13 @@
                         <p>
                             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Amet, libero, a perspiciatis odit, iste nam aperiam doloribus quae voluptas id dolorum sequi deleniti et ea. Inventore reprehenderit expedita accusamus nihil. Eius neque debitis eveniet voluptatibus minus harum blanditiis, reprehenderit et non, repellendus aliquid in quos, nostrum doloremque ipsam at. Aliquid dignissimos porro quae, commodi ut in autem. Quaerat, quam aliquam sed minima mollitia modi architecto tempora aut repudiandae iusto omnis obcaecati exercitationem hic quas facilis, id, recusandae adipisci. Neque itaque deleniti hic est modi sunt error distinctio quod quos accusantium, tempora veniam voluptates adipisci illo reiciendis repellendus maiores libero. Nisi quibusdam quam, illo placeat commodi earum enim consequuntur sapiente? Molestias doloremque quidem perspiciatis fugiat officiis vitae quasi cum, consectetur quis sapiente iste tempora reiciendis unde laborum necessitatibus aperiam magnam mollitia quia voluptas. Placeat eius nisi aut. Molestiae natus saepe maxime perspiciatis nobis expedita voluptatem labore iure facere. Quidem, quod quis?
                         </p>
-                    </main>
+                    </main> 
                     <footer>
                         <h2>Author: Andrea Dada</h2>
                         
                         <h3>Last posted: 01-08-2024</h3>
                         <a href="https://www.brightnetwork.co.uk/" target="_blank">Author's profile</a>
-                    </footer>
+                    </footer> -->
                 </article>
             </div>
           
