--- a/index.html
+++ b/index.html
@@ -60,7 +60,14 @@
                          <img src="https://scanmagazine.co.uk/content/uploads/2022/04/Marville-Road_1_Easily-fashionable_Marville-Road-web.jpg" alt="A profile pic of a woman in a trench coat">
                          <img src="https://img.freepik.com/premium-photo/young-woman-finding-inner-calm-through-yoga-comfort-her-home-concept-yoga-home-inner-calm-finding-peace-selfcare-mindfulness_918839-29337.jpg" alt="A woman doing yoga">
                          <img src="https://media.istockphoto.com/id/1307568521/photo/its-the-denim-that-does-it-for-me.jpg?s=612x612&w=0&k=20&c=0RQfpn8VJxXl6sO4aUehTsPvyYKGPwVwz1EdJRBU_Nw=" alt="A woman wearing streetwear">
-                         <h3>Read time: 100 minutes</h3>
+                         <img src="https://fashionista.com/.image/ar_1:1%2Cc_fill%2Ccs_srgb%2Cfl_progressive%2Cq_auto:good%2Cw_1200/MjAxMjM0ODk4NDc0NzcxOTkw/paris-fashion-week-spring-2024-best-collections.jpg" alt="A woman on the runway">
+                         <img src="https://media.listquicker.com/users/schulz/post-163-64839b7ace5cd-3333x1200.webp" alt="Woman on the beach">
+                         <img src="https://images.squarespace-cdn.com/content/v1/58f79385ff7c506839374ec6/15006bf8-a191-4581-9ed8-1998965a804b/delammawellness-lcarvittophotography-16.jpg" alt="Female spa treatment">
+                         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRoC87ebfNZfYPwou2g_-bQNeKc_gj0qV1Lbg&s" alt="Picture of a salad">
+                         <img src="https://img.etimg.com/thumb/width-420,height-315,imgsize-95430,resizemode-75,msid-109632806/top-trending-products/beauty/skin-care/best-skincare-essentials-for-summer-achieve-radiant-healthy-skin-all-season-long/skincare.jpg" alt="Skincare products">
+                         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRkD5J5TKwGstUQFSryTHesuzEjsfziVX-Ummn94_bJvnnRGSbQbbqN2cOv4U6qMwvOn8Q&usqp=CAU" alt="Makeup products">
+                         <img src="https://www.shutterstock.com/image-photo/fitness-woman-jumping-outdoor-urban-260nw-1080117269.jpg" alt="Exercise">
+                        <!-- <h3>Read time: 100 minutes</h3> -->
                     </header>
                    <!-- <main>
                         <p>
