--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                               <a target="_blank" href="https://img.freepik.com/premium-photo/young-woman-finding-inner-calm-through-yoga-comfort-her-home-concept-yoga-home-inner-calm-finding-peace-selfcare-mindfulness_918839-29337.jpg">
                                 <img src="https://img.freepik.com/premium-photo/young-woman-finding-inner-calm-through-yoga-comfort-her-home-concept-yoga-home-inner-calm-finding-peace-selfcare-mindfulness_918839-29337.jpg" alt="A woman doing yoga">
                               </a>
-                              <div class="desc">Add a description of the image here</div>
+                              <div class="desc">Yoga</div>
                             </div>
                           </div>
                           
@@ -139,7 +139,7 @@
                               <a target="_blank" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRkD5J5TKwGstUQFSryTHesuzEjsfziVX-Ummn94_bJvnnRGSbQbbqN2cOv4U6qMwvOn8Q&usqp=CAU">
                                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRkD5J5TKwGstUQFSryTHesuzEjsfziVX-Ummn94_bJvnnRGSbQbbqN2cOv4U6qMwvOn8Q&usqp=CAU" alt="Makeup products">
                               </a>
-                              <div class="desc">Skincare products</div>
+                              <div class="desc">Makeup products</div>
                             </div>
                           </div>
 
